--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -623,6 +623,9 @@ config QCOM_LIQUID_DOCK
 config UID_CPUTIME
 	tristate "Per-UID cpu time statistics"
 	depends on PROFILING
+	select TASKSTATS
+	select TASK_XACCT
+	select TASK_IO_ACCOUNTING
 	help
 	  Per UID based cpu time statistics exported to /proc/uid_cputime
 
