Enable HW accelerated crypto algorithm

--- a/arch/arm64/configs/angler_defconfig
+++ b/arch/arm64/configs/angler_defconfig
@@ -137,11 +137,13 @@ CONFIG_UIDGID_CONVERTED=y
 CONFIG_RELAY=y
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_INITRAMFS_SOURCE=""
+CONFIG_HAVE_KERNEL_LZO=y
+CONFIG_KERNEL_LZO=y
 CONFIG_RD_GZIP=y
 # CONFIG_RD_BZIP2 is not set
 # CONFIG_RD_LZMA is not set
 # CONFIG_RD_XZ is not set
-# CONFIG_RD_LZO is not set
+CONFIG_RD_LZO=y
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
@@ -1004,8 +1006,8 @@ CONFIG_OF_RESERVED_MEM=y
 # CONFIG_PARPORT is not set
 CONFIG_BLK_DEV=y
 # CONFIG_BLK_DEV_PCIESSD_MTIP32XX is not set
-CONFIG_ZRAM=y
-CONFIG_ZRAM_LZ4_COMPRESS=y
+# CONFIG_ZRAM is not set
+# CONFIG_ZRAM_LZ4_COMPRESS is not set
 # CONFIG_ZRAM_DEBUG is not set
 # CONFIG_BLK_CPQ_CISS_DA is not set
 # CONFIG_BLK_DEV_DAC960 is not set
@@ -2267,7 +2269,7 @@ CONFIG_MEDIA_SUBDRV_AUTOSELECT=y
 # CONFIG_DRM is not set
 CONFIG_MSM_KGSL=y
 # CONFIG_MSM_KGSL_CFF_DUMP is not set
-CONFIG_MSM_ADRENO_DEFAULT_GOVERNOR="msm-adreno-tz"
+CONFIG_MSM_ADRENO_DEFAULT_GOVERNOR="simple_ondemand"
 CONFIG_KGSL_PER_PROCESS_PAGE_TABLE=y
 # CONFIG_VGASTATE is not set
 # CONFIG_VIDEO_OUTPUT_CONTROL is not set
@@ -2339,6 +2341,7 @@ CONFIG_FB_MSM_MDSS_COMMON=y
 # CONFIG_FB_MSM_MDP31 is not set
 # CONFIG_FB_MSM_MDP40 is not set
 CONFIG_FB_MSM_MDSS=y
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 # CONFIG_FB_MSM_MDP_NONE is not set
 # CONFIG_FB_MSM_MDDI is not set
 # CONFIG_FB_MSM_MIPI_DSI is not set
@@ -3837,6 +3840,8 @@ CONFIG_CRYPTO_XCBC=y
 # Digest
 #
 CONFIG_CRYPTO_CRC32C=y
+CONFIG_CRYPTO_CRC32_ARM64=y
+CONFIG_CRYPTO_CRC32_ARM64_CE=y
 # CONFIG_CRYPTO_CRC32 is not set
 # CONFIG_CRYPTO_GHASH is not set
 CONFIG_CRYPTO_MD4=y
@@ -3938,7 +3943,8 @@ CONFIG_LZ4_COMPRESS=y
 CONFIG_LZ4_DECOMPRESS=y
 # CONFIG_XZ_DEC is not set
 # CONFIG_XZ_DEC_BCJ is not set
-CONFIG_DECOMPRESS_GZIP=y
+# CONFIG_DECOMPRESS_GZIP is not set
+# CONFIG_DECOMPRESS_LZ is not set
 CONFIG_GENERIC_ALLOCATOR=y
 CONFIG_REED_SOLOMON=y
 CONFIG_REED_SOLOMON_ENC8=y
