--- a/arch/arm64/configs/angler_defconfig
+++ b/arch/arm64/configs/angler_defconfig
@@ -1976,7 +1976,7 @@ CONFIG_THERMAL_HWMON=y
 # CONFIG_THERMAL_GOV_FAIR_SHARE is not set
 # CONFIG_THERMAL_GOV_STEP_WISE is not set
 # CONFIG_THERMAL_GOV_USER_SPACE is not set
-# CONFIG_CPU_THERMAL is not set
+CONFIG_CPU_THERMAL=y
 # CONFIG_THERMAL_EMULATION is not set
 CONFIG_THERMAL_TSENS8974=y
 CONFIG_LIMITS_MONITOR=y
