--- a/arch/arm64/configs/angler_defconfig
+++ b/arch/arm64/configs/angler_defconfig
@@ -3451,6 +3451,7 @@ CONFIG_SCHED_CORE_CTL=y
 CONFIG_QCOM_NPA_DUMP=y
 # CONFIG_KERNEL_TEXT_MPU_PROT is not set
 # CONFIG_MEM_SHARE_QMI_SERVICE is not set
+CONFIG_STATE_NOTIFIER=y
 
 #
 # Firmware Drivers
