--- a/arch/arm64/configs/angler_defconfig
+++ b/arch/arm64/configs/angler_defconfig
@@ -445,7 +445,8 @@ CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
-CONFIG_CPU_BOOST=y
+# CONFIG_CPU_BOOST is not set
+CONFIG_CPU_INPUT_BOOST=y
 # CONFIG_GENERIC_CPUFREQ_CPU0 is not set
 
 #
@@ -1974,15 +1975,16 @@ CONFIG_THERMAL_DEFAULT_GOV_STEP_WISE=y
 # CONFIG_THERMAL_GOV_FAIR_SHARE is not set
 CONFIG_THERMAL_GOV_STEP_WISE=y
 # CONFIG_THERMAL_GOV_USER_SPACE is not set
-# CONFIG_CPU_THERMAL is not set
+CONFIG_CPU_THERMAL=y
 # CONFIG_THERMAL_EMULATION is not set
 CONFIG_THERMAL_TSENS8974=y
 CONFIG_LIMITS_MONITOR=y
 CONFIG_LIMITS_LITE_HW=y
-CONFIG_THERMAL_MONITOR=y
+# CONFIG_THERMAL_MONITOR is not set
 # CONFIG_SUPPLY_LM_MONITOR is not set
 CONFIG_THERMAL_QPNP=y
 CONFIG_THERMAL_QPNP_ADC_TM=y
+CONFIG_THERMAL_MONITOR_SIMPLE=y
 # CONFIG_WATCHDOG is not set
 CONFIG_SSB_POSSIBLE=y
 
@@ -3440,8 +3442,9 @@ CONFIG_MSM_SHARED_HEAP_ACCESS=y
 CONFIG_MSM_SYSTEM_HEALTH_MONITOR=y
 CONFIG_QCOM_EARLY_RANDOM=y
 # CONFIG_MSM_PACMAN is not set
+CONFIG_STATE_NOTIFIER=y
 # CONFIG_MSM_CORE_CTL_HELPER is not set
-CONFIG_MSM_PERFORMANCE=y
+# CONFIG_MSM_PERFORMANCE is not set
 CONFIG_QCOM_NPA_DUMP=y
 # CONFIG_KERNEL_TEXT_MPU_PROT is not set
 # CONFIG_MEM_SHARE_QMI_SERVICE is not set
